# Dreamcode

./: .env.example  .gitignore  .pre-commit-config.yaml  2.0.0  CLAUDE.md  Dockerfile  Meeting1 + Timeline.md  README.md  devlog_2026-06-01.md  environment.yml  pyproject.toml  pyrightconfig.json  railway.json  requirements-dev.txt  requirements-finetune.txt  requirements.txt
.github/workflows/: ci.yml
app/: index.html  server.py
app/static/css/: style.css
app/static/js/: app.js
config/: config.yaml
data/bert_finetune/: samples.jsonl
data/examples/: README.md
docs/: architecture.html  decisions.md  tool_protocol.md
scripts/: eval_golden.py  finetune_bert.py  hello_world.py  regen_report_charts.py  run_insight_agent.py  run_pm_demo.py  run_report_agent.py  run_server.py  smoke_doubao.py
scripts/demo/: dry_run.py  player.py  runner.py  test_report.py
scripts/node/: app_store_scraper.js  package-lock.json  package.json
src/cca/: graph.py  schema.py  settings.py  state.py
src/cca/agents/: _streaming.py  analyst.py  collector.py  insight.py  pm.py  qa_chat.py  qa_report.py
src/cca/auth/: google_oauth.py  password_auth.py  session.py  sms_otp.py
src/cca/demo/: _common.py
src/cca/domain_seeds/: README.md
src/cca/llm/: factory.py  structured.py
src/cca/memory/: react_cache.py
src/cca/observability/: logger.py
src/cca/prompts/: analyst.md  collector_collect.md  collector_exploration.md  distill.md  insight.md  pm.md  report_agent.md
src/cca/skills/: call_report_reviewer.py  debate.py  reroute.py
src/cca/skills/bert_finetune/: collect.py  subgraph.py  train.py
src/cca/store/: __init__.py  db.py
src/cca/tools/: _distill.py  _validation.py  analyst_tools.py  appstore.py  chart.py  collector_tools.py  fetcher.py  insight_tools.py  pdf_reader.py  pdf_renderer.py  places.py  report_tools.py  review_channel.py  search.py
src/cca/utils/: nlp_utils.py
tests/: conftest.py  test_graph.py  test_schema.py  test_settings.py  test_state.py
tests/fixtures/: feishu_seed.yaml  mock_llm_responses.json  mock_sources.json  mock_state.py  seed_demo.md
tests/golden/cases/: feishu_collab_suite.json
tests/test_agents/: test_analyst.py  test_collector.py  test_collector_artifact.py  test_insight.py  test_pm.py  test_qa_chat.py  test_qa_report.py  test_streaming.py
tests/test_app/: conftest.py  test_pdf.py  test_question.py  test_reports.py
tests/test_llm/: test_factory.py
tests/test_observability/: test_logger.py
tests/test_skills/: test_bert_finetune.py  test_call_report_reviewer.py  test_debate.py  test_questionnaire.py  test_reroute.py
tests/test_store/: test_db.py
tests/test_tools/: test_appstore.py  test_chart_dual_axis.py  test_collector_tools.py  test_fetcher.py  test_pdf_reader.py  test_places.py  test_review_channel.py  test_search.py  test_validation.py
(+5 files in other folders)
