[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cca"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # LangGraph / LangChain
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    # LLM 客户端
    "openai>=1.40.0",
    "langchain-openai>=0.2.0",
    "langchain-deepseek>=0.1.0",
    "volcengine-python-sdk>=1.0.0",   # Doubao（火山方舟）
    # 基础工具
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # 信息采集
    "tavily-python>=0.5.0",           # web_search
    "requests>=2.32.0",
    "httpx>=0.27.0",                  # fetcher
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",                    # trafilatura 解析后端
    "trafilatura>=2.0.0",            # fetcher 正文提取
    "pypdf>=4.0.0",                  # pdf_reader 文档抽取
    # 数据分析
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",             # 图表渲染
    "pillow>=10.0.0",                # 图片处理
    "scikit-learn>=1.4.0",           # Insight NMF 主题提取 + 词云 TF-IDF 词频
    "jieba>=0.42.1",                 # NMF 预处理中文分词
    "wordcloud>=1.9.0",              # 用户口碑词云渲染
    # NLP 推理（Insight BERT 情感分类；CPU 即可）
    "transformers>=4.40.0",
    "torch>=2.1.0",
    # 前端 / 服务器
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # 报告渲染
    "markdown-it-py>=3.0.0",         # pdf_renderer
    "weasyprint>=62.0",              # Linux/Mac
    "reportlab>=4.0.0",              # Windows
    # 认证
    "tencentcloud-sdk-python-sms>=3.0.0",   # 手机号短信验证码
    # 可观测性
    "langsmith>=0.1.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",                   # lint + format
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
finetune = [
    "datasets>=2.18.0",             # BERT 离线微调（scripts/finetune_bert.py）
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".claude", "checkpoints", "data", "logs", "reports", "docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (formatter 处理)
    "B008",  # function call in default arg (FastAPI/typer 常用)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
markers = [
    "slow: 跑得慢的测试（联调/真API），默认 CI 跳过",
    "integration: 端到端集成测试",
]
